--- a/002.html
+++ b/002.html
@@ -29,11 +29,6 @@
 		 font-size: 1.4em;
 		 padding: 10px 20px;
 	  }
-	
-	  .text li { 
-		 margin-bottom: 5px; 
-		 list-style: none;
-	  }
     </style>
   </head>
   <body>
@@ -83,18 +78,18 @@
           <div style="border-bottom: 2px solid #e2e2e2; "></div>
         </div>
         <div class="text">
-          <p>人生的轻松，就是能在这个喧嚣的尘世，不用献媚于谁，也不必跟谁说讨好的话，他玩他的，你活你的。两不相干，然后，两相安。</p>
-          <p>你在意谁，在意到极致，就会活在这个人的阴影里。这种在意，不外乎两种情况：想求取和怕得罪。也就是说，人生的疲惫，更多的不是在自己这里拎不起，而是在别人那里撇不清。别人，成了自己沉重的彼岸。</p>
+          <p class="text-center">人生的轻松，就是能在这个喧嚣的尘世，不用献媚于谁，也不必跟谁说讨好的话，他玩他的，你活你的。两不相干，然后，两相安。</p>
+          <p class="text-center">你在意谁，在意到极致，就会活在这个人的阴影里。这种在意，不外乎两种情况：想求取和怕得罪。也就是说，人生的疲惫，更多的不是在自己这里拎不起，而是在别人那里撇不清。别人，成了自己沉重的彼岸。</p>
           <p class="text-center"><img width="60%" src="img/daily/002/002[1].jpg" class="img-rounded"></p>
-          <p>越在他人那里唯唯诺诺，就越会在自我的言行里战战兢兢。生怕说错什么，做错什么，进一步畏首畏尾，退一步左顾右盼，是进亦忧退亦忧。在这样的境况里，最累人的，不是做，而是拿捏着分寸去做。一个低声下气的人，凭恃他人，无论得到过多少，繁盛也好，光鲜也罢，最终，在自我矮化的奴才人格里，冷暖自知，甘苦备尝。</p>
-          <p>不是一路人，就不会在一个语言系统里。不在一个语言系统，就不会在同一个世界中。知心的话，不必说给不懂的人听，说了不懂还在其次，最怕的，是说了不屑。不懂已是伤害，不屑便是亵渎。</p>
+          <p class="text-center">越在他人那里唯唯诺诺，就越会在自我的言行里战战兢兢。生怕说错什么，做错什么，进一步畏首畏尾，退一步左顾右盼，是进亦忧退亦忧。在这样的境况里，最累人的，不是做，而是拿捏着分寸去做。一个低声下气的人，凭恃他人，无论得到过多少，繁盛也好，光鲜也罢，最终，在自我矮化的奴才人格里，冷暖自知，甘苦备尝。</p>
+          <p class="text-center">不是一路人，就不会在一个语言系统里。不在一个语言系统，就不会在同一个世界中。知心的话，不必说给不懂的人听，说了不懂还在其次，最怕的，是说了不屑。不懂已是伤害，不屑便是亵渎。</p>
           <p class="text-center"><img width="60%" src="img/daily/002/002[2].jpg" class="img-rounded"></p>
-          <p>散淡的人，只与散淡的人合得来。而奸邪的人，看起来跟谁都合得来。这不奇怪，因为在这个世界里，有的人只认对的人，有的人，似乎跟谁都对。只因为，有的人，是奔着相宜的心去的;而有的人，是奔着可逐的名利去的。</p>
-          <p>在交往上，目的性太强，原则性就会差。在左右逢源的人那里，找不到纯美的人性;在蝇营狗苟的人那里，找不到纯净的人格。这个世界，总有狷介甚或狂傲的人，看起来，没有几个可以合得来的人，他们不迎合，不投降，只是不想生命苟且于世俗。</p>
+          <p class="text-center">散淡的人，只与散淡的人合得来。而奸邪的人，看起来跟谁都合得来。这不奇怪，因为在这个世界里，有的人只认对的人，有的人，似乎跟谁都对。只因为，有的人，是奔着相宜的心去的;而有的人，是奔着可逐的名利去的。</p>
+          <p class="text-center">在交往上，目的性太强，原则性就会差。在左右逢源的人那里，找不到纯美的人性;在蝇营狗苟的人那里，找不到纯净的人格。这个世界，总有狷介甚或狂傲的人，看起来，没有几个可以合得来的人，他们不迎合，不投降，只是不想生命苟且于世俗。</p>
           <p class="text-center"><img width="60%" src="img/daily/002/002[3].jpg" class="img-rounded"></p>
-          <p>伟岸的人心中常常都有一些孤傲，他们遗世独立，盛享着内心孤独的清凉。每一个窝藏着的私心，都会影响到对他人公允的评判。盛大的完美，未必坍圮于风雨，却可以瓦解于私心。一千次地改变和完善自己，终难抵别人的一颗横无际涯的私心。</p>
+          <p class="text-center">伟岸的人心中常常都有一些孤傲，他们遗世独立，盛享着内心孤独的清凉。每一个窝藏着的私心，都会影响到对他人公允的评判。盛大的完美，未必坍圮于风雨，却可以瓦解于私心。一千次地改变和完善自己，终难抵别人的一颗横无际涯的私心。</p>
 		  		<p class="text-center"><img width="60%" src="img/daily/002/002[4].jpg" class="img-rounded"></p>
-		  		<p>所以，不要苛求在所有的人那里都有好的评价。讨好了所有的人，就意味着要彻底得罪了自己。一个人，平庸点不可怕，变得八面玲珑才可怕。你最终要活在相悦的人心里。不为不值得的人去改变，不在飘忽而逝的生命过客那里留恋，也不必为朵朵过眼烟云烦扰。与其要别人看好，不如自己活到好看。</p>
+		  		<p class="text-center">所以，不要苛求在所有的人那里都有好的评价。讨好了所有的人，就意味着要彻底得罪了自己。一个人，平庸点不可怕，变得八面玲珑才可怕。你最终要活在相悦的人心里。不为不值得的人去改变，不在飘忽而逝的生命过客那里留恋，也不必为朵朵过眼烟云烦扰。与其要别人看好，不如自己活到好看。</p>
         </div><hr>
         <div class="footer text-center">
           <span><button id="up" class="btn btn-success"><span class="glyphicon glyphicon-thumbs-up">(</span><span id="clicks_up">50</span>)</button></span>
