--- a/001.html
+++ b/001.html
@@ -27,7 +27,7 @@
 	  .text { 
 		 text-indent: 40px;
 		 font-size: 1.4em;
-		 padding: 10px 20px;
+		 padding: 10px;
 	  }
     </style>
   </head>
