--- a/003.html
+++ b/003.html
@@ -27,12 +27,7 @@
 	  .text { 
 		 text-indent: 40px;
 		 font-size: 1.4em;
-		 padding: 10px 20px;
-	  }
-	
-	  .text li { 
-		 margin-bottom: 5px; 
-		 list-style: none;
+		 padding: 10px;
 	  }
     </style>
   </head>
