--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<meta http-equiv="pragma" content="no-cache">
 		<meta http-equiv="cache-control" content="no-cache"> 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">   
-		<meta http-equiv="description" content="This is my page">
-		<meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
+		<meta http-equiv="description" content="大爱我小宝哥是一个经典美文，程序人生日记聚集的博客系统！">
+		<meta http-equiv="keywords" content="大宝,小宝哥,大爱我小宝哥">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
