--- a/index.html
+++ b/index.html
@@ -4,56 +4,56 @@
     <meta charset="utf-8">
     <title>大爱我小宝哥的博客---主页</title>
     <link rel="stylesheet" href="css/index.css">
-		<meta http-equiv="expires" content="0">
-		<meta http-equiv="pragma" content="no-cache">
-		<meta http-equiv="cache-control" content="no-cache"> 
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">   
-		<meta http-equiv="description" content="大爱我小宝哥是一个经典美文，程序人生日记聚集的博客系统！">
-		<meta http-equiv="keywords" content="大宝,小宝哥,大爱我小宝哥">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
-		<link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/bootstrap-theme.css">
-		<link rel="stylesheet" href="css/basic.css">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
+    <meta http-equiv="description" content="大爱我小宝哥是一个经典美文，程序人生日记聚集的博客系统！">
+    <meta http-equiv="keywords" content="大宝,小宝哥,大爱我小宝哥">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="css/basic.css">
   </head>
   <body>
     <header>
-		  <!-- 顶部导航栏开始 -->
-		  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		    <div class="navbar-inner">
-		      <div class="container">
-		        <!-- Brand and toggle get grouped for better mobile display -->
-		        <div class="navbar-header">
-		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		            <span class="sr-only"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		          </button>
-		          <a class="navbar-brand" href="index.html">小宝哥的博客</a>
-		        </div>
-		
-		        <!-- Collect the nav links, forms, and other content for toggling -->
-		        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		          <ul class="nav navbar-nav">
-		            <li class="active"><a href="index.html" title="Protal">主页</a></li>
-		            <li><a href="daily.html" title="Daily">日记</a></li>
-		            <li><a href="album.html" title="Album">相册</a></li>
-		            <li><a href="about.html" title="About">关于</a></li>
-		          </ul>
-		          <form class="navbar-form navbar-right" role="search">
-		            <div class="form-group">
-		              <input type="text" class="form-control" placeholder="Search">
-		            </div>
-		            <button type="submit" class="btn btn-default">搜索</button>
-		          </form>
-		        </div><!-- /.navbar-collapse end -->
-		      </div><!-- /.container-fluid end -->
-		    </div>
-		  </nav>
-		  <!-- 顶部导航栏结束 -->
-		</header>
+      <!-- 顶部导航栏开始 -->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-inner">
+          <div class="container">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="index.html">小宝哥的博客</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="index.html" title="Protal">主页</a></li>
+	        <li><a href="daily.html" title="Daily">日记</a></li>
+	        <li><a href="album.html" title="Album">相册</a></li>
+	        <li><a href="about.html" title="About">关于</a></li>
+	      </ul>
+	      <form class="navbar-form navbar-right" role="search">
+	        <div class="form-group">
+	          <input type="text" class="form-control" placeholder="Search">
+	        </div>
+	        <button type="submit" class="btn btn-default">搜索</button>
+	      </form>
+	    </div><!-- /.navbar-collapse end -->
+          </div><!-- /.container-fluid end -->
+        </div>
+      </nav>
+      <!-- 顶部导航栏结束 -->
+    </header>
     <div class="container">
       <p id="back-to-top"><a href="#top"><span></span>返回顶部</a></p>
       <!-- 顶部滚动幻灯片开始 -->
@@ -139,17 +139,16 @@
 	      </div>
           <p class="text-center">用心甘情愿的态度，过随遇而安的生活</p>
         </div><hr>
-        <div class="text-center"> 
-			  	<embed type="application/x-shockwave-flash" 
-			  		src="swf/xfish.swf" wmode="opaque" bgcolor="F6F6F6" flashvars="up_numFish=6&amp;up_fishColor4=#FFFFFF&amp;up_backgroundColor=F6F6F6&amp;up_fishColor1=F4A61C&amp;up_fishColor7=F45540&amp;up_fishColor6=F45540&amp;up_fishColor8=F45540&amp;up_fishColor2=C4C4C4&amp;up_fishColor9=F45540&amp;up_fishColor3=#600000&amp;up_fishName=Fish&amp;up_fishColor5=F45540&amp;up_fishColor10=F45540&amp;up_backgroundImage=http://&amp;up_foodColor=FCB347&amp;">
-		      
-				</div><hr>
-				<div class="text-center">
-				  <h3>近期文章</h3>
-			      <p><a href="#">不要随便找喜欢的人聊天</a></p>
-			      <p><a href="#">怕黑就开灯，想念就联系</a></p>
-			      <p><a href="#">原来，灯火阑珊处空无一人</a></p>
-				</div><hr>
+   
+	<embed type="application/x-shockwave-flash" 
+	   src="swf/xfish.swf" wmode="opaque" bgcolor="F6F6F6" flashvars="up_numFish=6&amp;up_fishColor4=#FFFFFF&amp;up_backgroundColor=F6F6F6&amp;up_fishColor1=F4A61C&amp;up_fishColor7=F45540&amp;up_fishColor6=F45540&amp;up_fishColor8=F45540&amp;up_fishColor2=C4C4C4&amp;up_fishColor9=F45540&amp;up_fishColor3=#600000&amp;up_fishName=Fish&amp;up_fishColor5=F45540&amp;up_fishColor10=F45540&amp;up_backgroundImage=http://&amp;up_foodColor=FCB347&amp;">
+	</embed>
+	<div class="text-center">
+	  <h3>近期文章</h3>
+    	  <p><a href="002.html">别人不是你的彼岸!</a></p>
+     	  <p><a href="003.html">你的未来，我奉陪到底!</a></p>
+     	  <p><a href="001.html">在乎你的人，永远比你主动！</a></p>
+	</div><hr>
         <object type="application/x-shockwave-flash" style="outline:none;"
           data="swf/hamster.swf">
           <param name="movie" value="swf/hamster.swf">
@@ -174,25 +173,31 @@
       </div>
       
       <div class="col-md-8 article-content">
-      <article>
-        <p class="title text-center">别人不是你的彼岸</p>
-        <ul class="text">
-          <li>人生的轻松，就是能在这个喧嚣的尘世，不用献媚于谁，也不必跟谁说讨好的话，他玩他的，你活你的。两不相干，然后，两相安。</li>
-          <li>你在意谁，在意到极致，就会活在这个人的阴影里。这种在意，不外乎两种情况：想求取和怕得罪。也就是说，人生的疲惫，更多的不是在自己这里拎不起，而是在别人那里撇不清。别人，成了自己沉重的彼岸。</li>
-          <li>越在他人那里唯唯诺诺，就越会在自我的言行里战战兢兢。生怕说错什么，做错什么，进一步畏首畏尾，退一步左顾右盼，是进亦忧退亦忧。在这样的境况里，最累人的，不是做，而是拿捏着分寸去做。一个低声下气的人，凭恃他人，无论得到过多少，繁盛也好，光鲜也罢，最终，在自我矮化的奴才人格里，冷暖自知，甘苦备尝。</li>
-          <li class="text-center">
-            <img width="70%" src="img/article/s-banner1.jpg">
-          </li>
-          <li>不是一路人，就不会在一个语言系统里。不在一个语言系统，就不会在同一个世界中。知心的话，不必说给不懂的人听，说了不懂还在其次，最怕的，是说了不屑。不懂已是伤害，不屑便是亵渎。</li>
-          <li>散淡的人，只与散淡的人合得来。而奸邪的人，看起来跟谁都合得来。这不奇怪，因为在这个世界里，有的人只认对的人，有的人，似乎跟谁都对。只因为，有的人，是奔着相宜的心去的;而有的人，是奔着可逐的名利去的。</li>
-          <li>在交往上，目的性太强，原则性就会差。在左右逢源的人那里，找不到纯美的人性;在蝇营狗苟的人那里，找不到纯净的人格。这个世界，总有狷介甚或狂傲的人，看起来，没有几个可以合得来的人，他们不迎合，不投降，只是不想生命苟且于世俗。</li>
-          <li>伟岸的人心中常常都有一些孤傲，他们遗世独立，盛享着内心孤独的清凉。每一个窝藏着的私心，都会影响到对他人公允的评判。盛大的完美，未必坍圮于风雨，却可以瓦解于私心。一千次地改变和完善自己，终难抵别人的一颗横无际涯的私心。</li>
-		  <li>所以，不要苛求在所有的人那里都有好的评价。讨好了所有的人，就意味着要彻底得罪了自己。一个人，平庸点不可怕，变得八面玲珑才可怕。你最终要活在相悦的人心里。不为不值得的人去改变，不在飘忽而逝的生命过客那里留恋，也不必为朵朵过眼烟云烦扰。与其要别人看好，不如自己活到好看。</li>
-        </ul><hr>
-        <div class="footer text-center">
-          <span><button id="up" class="btn btn-success"><span class="glyphicon glyphicon-thumbs-up">(</span><span id="clicks_up">50</span>)</button></span>
-          <span><button class="btn btn-info" id="myinfo">作者：刘小宝</button></span>
-          <span><button id="down" class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-down"></span>(<span id="clicks_down">50</span>)</button></span>
+      <article><br>
+        <h2 class="title text-center">小宝哥的项目</h2><hr>
+        <div clas="col-md-8">
+          <h3 class="text-center">一.<a href="https://github.com/54lxb/MyBlog">MyBlog</a></h3><hr>
+          <div class="description">
+          	<p>自写博客项目，实现登录，自动登录，注册，发送激活邮件，注销，发帖子，查看帖子，回复帖子等功能！</p>
+          	<p>使用了JavaWeb的经典三层架构（MVC），使用MySQL数据库，C3P0开源连接池，利用AOP(面向切面编程)模式和注解，实现事务的动态管理！</p>
+          	<p>前端布局使用Bootstrap框架搭建，其间加入了ckeditor富文本编辑器，使界面更加友好，美观！欢迎大家去我的GitHub主页Fork并watch！</p>
+          </div>
+        </div><br>
+        <div clas="col-md-8">
+          <h3 class="text-center">二.<a href="https://github.com/54lxb/Estore">Estore</a></h3><hr>
+          <div class="description">
+          	<p>自写商城项目，实现登录，自动登录，注册，发送激活邮件，注销，查看商品列表，单个商品详情，加入购物车，进行结算，以及支付接口的调用等功能！</p>
+          	<p>使用了JavaWeb的经典三层架构（MVC），使用MySQL数据库，C3P0开源连接池，利用AOP(面向切面编程)模式和注解，实现事务的动态管理！</p>
+          	<p>前端布局使用Bootstrap框架搭建，其间加入了ckeditor富文本编辑器，使界面更加友好，美观！欢迎大家去我的GitHub主页Fork并watch！</p>
+          </div>
+        </div><br>
+        <div clas="col-md-8">
+          <h3 class="text-center">三.<a href="https://github.com/54lxb/Forum">Forum</a></h3><hr>
+          <div class="description">
+          	<p>自写论坛项目，与博客项目基本一致，只是前端美化一般，实现登录，自动登录，注册，发送激活邮件，注销，发帖子，查看帖子，回复帖子等功能！</p>
+          	<p>使用了JavaWeb的经典三层架构（MVC），使用MySQL数据库，C3P0开源连接池，利用AOP(面向切面编程)模式和注解，实现事务的动态管理！</p>
+          	<p>前端布局使用Bootstrap框架搭建，其间加入了ckeditor富文本编辑器，使界面更加友好，美观！欢迎大家去我的GitHub主页Fork并watch！</p>
+          </div>
         </div><br>
       </article>
       <!-- 主页主要内容结束 -->
